# pinnforge

./: .gitignore  CLAUDE.md  block.md  pyproject.toml
.claude/: settings.json
.claude/commands/: pinnforge.md
.claude/hooks/: py_write_scope.py
.claude/skills/archive-data/: SKILL.md
.claude/skills/reset-framework/: SKILL.md
.claude/skills/swap-task/: SKILL.md
blocks/b00/: b00_v01.pkl  b00_v01.py  evals.jsonl
blocks/kb2/: b00.md
kb/kb1/: INDEX.md
kb/kb2/: b00.md
kb1/: 008_2019_Physics-informed_neural_networks_A_deep_learning_framework_f.md  026_2020_When_and_why_PINNs_fail_to_train_A_neural_tangent_kernel_per.md  082_2024_PirateNets_Physics-informed_Deep_Learning_with_Residual_Adap.md
task/: baseline.py  eval.py  ks_ic.csv  problem.md  ref_data.csv
